--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
 <head>
   <meta charset="utf-8">
   <title>🦝NadirK's raccoon🦝</title>
+  <style >
+    body {
+      background-color: #5B4B8A;
+    }
+    hr{
+      background-color: #F77E21;
+      border-style: none;
+      height:3px;
+    }
+  </style>
 
 </head>
 
-<body>
+<body  >
   <center>
     <table cellspacing="40" border="6">
       <tr>
