--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <table cellspacing="100">
     <tr>
-      <td><img src="C:\Users\Nadir Kutluozen\Desktop\web development\HTML-Personal Site\css\racoonjoey.gif" /></td>
+      <td><img src="css/racoonjoey.gif" /></td>
       <td>
         <h1 style="color:#B25068;"> RACCON STREET </h1 >
         <p><em> <strong>A pixel art</strong> since 2021 by Nadir Kutluozen</em></p>
