--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
 
-  <table cellspacing="100">
+  <center><table cellspacing="100">
     <tr>
       <td><img src="css/racoonjoey.gif" /></td>
       <td>
@@ -34,7 +34,7 @@
         
       </td>
     </tr>
-  </table>
+  </table></center>
 
 
 
